k8s-service-install/monitoring/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: "prometheus.eks.leedh.cloud"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: prometheus-prometheus-oper-prometheus
            port:
              number: 9090
  tls:
  - hosts:
    - prometheus.eks.leedh.cloud
    secretName: monitoring-tls
